<resources>
    <string name="app_name">WallpaperX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="no_connection">No Connection</string>
    <string name="nothing_found">Nothing Found</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="favourites"> favourites</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="wallpaper">List of Wallpapers</string>
    <string name="selectedWallpaper">Selected Wallpaper</string>
    <string name="select">Set or Download Wallpaper</string>
    <string name="selectOptions">Next or Previous page</string>
    <string name="removedFav"> "Removed from Favourites"</string>
    <string name="addedFav">"Added to Favourites"</string>
    <string name="permissionDenied">"Permission Denied"</string>
    <string name="reachedEnd">"You have reached the end of the List"</string>
    <string name="nothingMore">"Nothing to show more"</string>
    <string name="women">Women</string>
    <string name="sign_out">Sign Out</string>
    <string name="video_game">Video Game</string>
    <string name="technology">Technology</string>
    <string name="sports">Sports</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="photography">Photography</string>
    <string name="pattern">Pattern</string>
    <string name="music">Music</string>
    <string name="movie">Movie</string>
    <string name="game">Game</string>
    <string name="food">Food</string>
    <string name="fantasy">Fantasy</string>
    <string name="anime">Anime</string>
    <string name="animal">Animal</string>
    <string name="abs">Abstract</string>
    <string name="celebrity">Celebrity</string>
    <string name="favouriteList">Favourites</string>
    <string name="all_categories">All Categories</string>
    <string name="most_popular">Most Popular</string>
    <string name="newest">Newest</string>
    <string name="fileDownloadWait">File is being downloaded...</string>
    <string name="settingWallpaper">Setting the wallpaper</string>
    <string name="pleaseWait">Please Wait...</string>


</resources>
