<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/most_popular"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/most_popular" />
        <item
            android:id="@+id/newest"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/newest" />


        <item
            android:id="@+id/favouritesWalls"
            android:icon="@drawable/ic_fav"
            android:title="@string/favouriteList" />
    </group>

    <item android:title="@string/all_categories">
        <menu>
            <item
                android:id="@+id/abstractWall"
                android:title="@string/abs" />
            <item
                android:id="@+id/animalWall"
                android:title="@string/animal" />
            <item
                android:id="@+id/animeWall"
                android:title="@string/anime" />
            <item
                android:id="@+id/celebWall"
                android:title="@string/celebrity" />

            <item
                android:id="@+id/fantasyWall"
                android:title="@string/fantasy" />

            <item
                android:id="@+id/foodWall"
                android:title="@string/food" />

            <item
                android:id="@+id/gameWall"
                android:title="@string/game" />
            <item
                android:id="@+id/movieWall"
                android:title="@string/movie" />
            <item
                android:id="@+id/musicWall"
                android:title="@string/music" />

            <item
                android:id="@+id/patternWall"
                android:title="@string/pattern" />

            <item
                android:id="@+id/photoWall"
                android:title="@string/photography" />

            <item
                android:id="@+id/sciFiWall"
                android:title="@string/sci_fi" />

            <item
                android:id="@+id/sportsWall"
                android:title="@string/sports" />

            <item
                android:id="@+id/techWall"
                android:title="@string/technology" />

            <item
                android:id="@+id/videoGameWall"
                android:title="@string/video_game" />

            <item
                android:id="@+id/womenWall"
                android:title="@string/women" />

            <item
                android:id="@+id/logOut"
                android:title="@string/sign_out" />

        </menu>
    </item>

</menu>
